--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⭐🌟✨EDUCASOL</title>
-    <link rel="icon" type="image/jpeg" href="imagens/estrela.jpeg">
-    <link rel="stylesheet" href="estilos/base.css">
-    <link rel="stylesheet" href="estilos/layout.css">
-    <link rel="stylesheet" href="estilos/componentes.css">
-    <link rel="stylesheet" href="estilos/resultado.css">
+    <link rel="icon" type="image/jpeg" href="educasolimagens/estrela.jpeg">
+    <link rel="stylesheet" href="educasol/estilos/base.css">
+    <link rel="stylesheet" href="educasol/estilos/layout.css">
+    <link rel="stylesheet" href="educasol/estilos/componentes.css">
+    <link rel="stylesheet" href="educasolestilos/resultado.css">
 </head>
 
 <body>
@@ -115,10 +115,10 @@
 </div>
 </section>
 
-<script src="scripts/logica-teste.js"></script>
-<script src="scripts/interface-visual.js"></script>
-<script src="scripts/comunicacao.js"></script>
-<script src="scripts/inicializador.js"></script>
+<script src="educasol/scripts/logica-teste.js"></script>
+<script src="educasol/scripts/interface-visual.js"></script>
+<script src="educasol/scripts/comunicacao.js"></script>
+<script src="educasolscripts/inicializador.js"></script>
 
 </body>
 </html>
