--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>⭐🌟✨EDUCASOL</title>
-    <link rel="icon" type="image/jpeg" href="educasolimagens/estrela.jpeg">
+    <link rel="icon" type="image/jpeg" href="educasol/imagens/estrela.jpeg">
     <link rel="stylesheet" href="educasol/estilos/base.css">
     <link rel="stylesheet" href="educasol/estilos/layout.css">
     <link rel="stylesheet" href="educasol/estilos/componentes.css">
-    <link rel="stylesheet" href="educasolestilos/resultado.css">
+    <link rel="stylesheet" href="educasol/estilos/resultado.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
 <div class="about-section top">
     <div class="profile-photo">
-        <img src="imagens/joice.jpeg" alt="Joice - Consultora Educacional">
+        <img src="educasol/imagens/joice.jpeg" alt="Joice - Consultora Educacional">
     </div>
     
     <h2>Sobre</h2>
@@ -118,7 +118,7 @@
 <script src="educasol/scripts/logica-teste.js"></script>
 <script src="educasol/scripts/interface-visual.js"></script>
 <script src="educasol/scripts/comunicacao.js"></script>
-<script src="educasolscripts/inicializador.js"></script>
+<script src="educasol/scripts/inicializador.js"></script>
 
 </body>
 </html>
